--- a/Proyecto/Proyecto/Templates/Padre.html
+++ b/Proyecto/Proyecto/Templates/Padre.html
@@ -20,11 +20,10 @@
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="">Inicio</a>
-                <a class="navbar-brand" href="">Profesores</a>
-                <a class="navbar-brand" href="">Cursos</a>
-                <a class="navbar-brand" href="">Estudiantes</a>
-                <a class="navbar-brand" href="">Entregables</a>
+                <a class="navbar-brand" href="{% url 'inicio' %}">Inicio</a>
+                <a class="navbar-brand" href="{% url 'alumnos' %}">Alumnos</a>
+                <a class="navbar-brand" href="{% url 'docentes' %}">Docentes</a>
+                <a class="navbar-brand" href="{% url 'cursos' %}">Cursos</a>
                 <a class="btn btn-primary" href="#signup">Sign Up</a>
             </div>
         </nav>
